# alqalign

./: note.txt  pyproject.toml  requirements.txt
alqalign/: process_alignment.py
